--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3"
   }
 }
